@startuml Architecture

skinparam packageStyle rectangle
allowmixing

package "Proto Definitions" as Proto {
}

class SensorServer 
package "Sensor Services" as SSensor {

    class LidarServiceImpl {
        -lidar : ILidar
    }
    class ImuServiceImpl {
        -imu : IImu
    }
    class CameraServiceImpl {
        -camera : ICamera
    }
    class AdcServiceImpl {
        -adc : IAdc
    }

    SensorServer *-- LidarServiceImpl
    SensorServer *-- ImuServiceImpl
    SensorServer *-- CameraServiceImpl
    SensorServer *-- AdcServiceImpl

}

package "Sensor Interfaces" as ISensor {
    interface ILidar
    interface IImu
    interface ICamera
    interface IAdc
}

package "Sensor Drivers" as Sensor {
    class RPLidar
    class Mid360
    class ICM20948
    class OpenCvCamera
    class ADS1115
}

package "Sensor Simulators" as SimSensor {
    class LidarSimulator
    class ImuSimulator
    class CameraSimulator
    class AdcSimulator
}

' Proto generates services
Proto ..> SSensor : generates

' Services depend on Interfaces (dependency injection)
LidarServiceImpl o-- ILidar
ImuServiceImpl o-- IImu
CameraServiceImpl o-- ICamera
AdcServiceImpl o-- IAdc

' Force Drivers below Interfaces
ISensor -down[hidden]- Sensor

' Drivers implement Interfaces
RPLidar .up.|> ILidar
Mid360 .up.|> ILidar
ICM20948 .up.|> IImu
OpenCvCamera .up.|> ICamera
ADS1115 .up.|> IAdc

' Simulators also implement Interfaces
LidarSimulator .up..|> ILidar
ImuSimulator .up..|> IImu
CameraSimulator .up..|> ICamera
AdcSimulator .up..|> IAdc

component SensorClient
' Client calls gRPC services
SensorClient --> LidarServiceImpl : getLidarScan
SensorClient --> ImuServiceImpl : getImuData
SensorClient --> CameraServiceImpl : getCameraFrame
SensorClient --> AdcServiceImpl : getAdcData
@enduml